--- a/index.html
+++ b/index.html
@@ -206,21 +206,21 @@
     <!-- --------------- FOOTER --------------- -->
     <footer>
         <div class="top-footer">
-            <p>John Doe .</p>
+            <p>Alejo Guerrero .</p>
         </div>
         <div class="middle-footer">
             <ul class="footer-menu">
                 <li class="footer_menu_list">
-                    <a href="#home">Home</a>
+                    <a href="#home">inicio</a>
                 </li>
                 <li class="footer_menu_list">
-                    <a href="#about">About</a>
+                    <a href="#about">sobre</a>
                 </li>
                 <li class="footer_menu_list">
-                    <a href="#projects">Projects</a>
+                    <a href="#projects">Proyectos</a>
                 </li>
                 <li class="footer_menu_list">
-                    <a href="#contact">Contact</a>
+                    <a href="#contact">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -231,7 +231,7 @@
             <div class="icon"><i class="uil uil-github-alt"></i></div>
         </div>
         <div class="bottom-footer">
-            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Marisol Rivera</a> - All rights reserved</p>
+            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Alejandro Guerrero</a> - All rights reserved</p>
         </div>
     </footer>
 
